Specify arm64 in workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,3 +27,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/ry0tak/pgroonga-arm:latest
+          platforms: linux/arm64
