--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+    
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@e81a89b1732b9c48d79cd809d8d81d79c4647a18
+    
       - name: Checkout repository
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
 
@@ -27,4 +31,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/ry0tak/pgroonga-arm:latest
-          platforms: linux/arm64/v8
+          platforms: linux/arm64
