--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            name/app
+            ry0tak/pgroonga-arm
             ghcr.io/ry0tak/pgroonga-arm
           # generate Docker tags based on the following events/attributes
           tags: |
